tests/out/undeclared_var.test
Cog: Error: (5:18): symbol 'age3' was not declared in this scope
    ----> tests/undeclared_var.cg
       |
     4 |     let age := 40;
     5 |     let age2 := age3;
       |                 ^~~~ 

cog: 1 semantic errors occurred
Cog: compilation aborted
